# jarvis-video-pipeline

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  SETUP.md  STRUCTURE.md  fly.toml  generate_video.py  jarvis_os.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-mission-control.yml  deploy.yml  generate-video.yml
agents/archangels/: __init__.py  gabriel.py  jophiel.py  michael.py  raphael.py  sariel.py
agents/factory/: agent_registry.json  agent_template.py  spawn_all.py
brains/obsidian/config/: agent.md  continuity.md  heartbeat.md  user.md
brains/obsidian/guides/: voice_cloning_options.md
brains/obsidian/prices/: README.md  pricing.yaml  pricing_structure.md  revenue_tracking.md  tarot_monthly.yaml  tarot_single.yaml  tattoo_consultation.yaml  tattoo_full_day.yaml  tattoo_half_day.yaml  tattoo_hourly.yaml
brains/obsidian/reports/: q3_2026_revenue_dashboard.md
config/: continuity.md  cron_jobs.yaml  crontab.jobs  dashboard.yaml  heartbeat.md  identity.md  integrations.yaml  integrations.yaml.example  openjarvis_config.toml  security.yaml  setup_tutorial.md  soul.md  tools.md  user.md  voice.yaml
config/agents/: registry.json
config/agents/azrael/: process.json  status.json
config/agents/chamuel/: process.json  status.json
config/agents/gabriel/: process.json  status.json
config/agents/jophiel/: process.json  status.json
config/agents/metatron/: process.json  status.json
config/agents/michael/: process.json  status.json
config/agents/raguel/: process.json  status.json
config/agents/raphael/: process.json  status.json
config/agents/remiel/: process.json  status.json
config/agents/sandalphon/: process.json  status.json
config/agents/sariel/: process.json  status.json
config/agents/uriel/: process.json  status.json
dashboard/public/: index.html
deploy/: Dockerfile.mission-control  docker-compose.yml  requirements.mission-control.txt
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: jarvis.conf
deployment/openjarvis/: README.md
deployment/openjarvis/deploy/docker/: Dockerfile  Dockerfile.gpu  Dockerfile.gpu.rocm  docker-compose.yml
deployment/openjarvis/deploy/windows/: install.ps1
deployment/openjarvis/docs/getting-started/: installation.md
deployment/openjarvis/docs/javascripts/: leaderboard-config.js
deployment/openjarvis/frontend/src/: App.tsx
deployment/openjarvis/tests/cli/: test_chat_cmd.py  test_doctor_cmd.py  test_memory_cmd.py
deployment/openjarvis/tests/memory/: test_memory_service.py
deployment/openjarvis/tests/server/: test_routes.py  test_speech_routes.py
deployment/openjarvis/tests/speech/: test_faster_whisper.py
deployment/openjarvis/tests/tools/: test_audio_tool.py
docs/architecture/: OVERVIEW.md
docs/guides/: QUICKSTART.md
docs/runbooks/: OPERATIONS.md
integrations/openjarvis/: .gitignore  mkdocs.yml  pyproject.toml
integrations/openjarvis/deploy/docker/: Dockerfile.sandbox  docker-compose.gpu.nvidia.yml
integrations/openjarvis/deploy/systemd/: openjarvis.service
integrations/openjarvis/deploy/windows/: README.md
integrations/openjarvis/docs/: downloads.md
integrations/openjarvis/docs/getting-started/: windows-native.md
integrations/openjarvis/docs/javascripts/: leaderboard.js
integrations/openjarvis/frontend/: index.html  vite.config.ts
integrations/openjarvis/frontend/src-tauri/: Cargo.toml
integrations/openjarvis/scripts/: quickstart.sh
integrations/openjarvis/tests/: conftest.py
integrations/openjarvis/tests/core/: test_config_phase5.py
integrations/openjarvis/tests/deployment/: test_docker.py  test_docs_leaderboard.py
integrations/openjarvis/tests/engine/: test_ollama.py
jarvis-os/: Continuity.md  MENTOR-PROGRAM.md  SOUL.md
scripts/: daily_report.py  dream_process.py  health_check.py  integrity_check.py  log_rotate.py  nemotron_quickstart.sh  nightly_audit.py  security_audit.py  setup_openrouter.sh  setup_vllm_nemotron.sh
scripts/brain_sync/: index_brains.py  rag_query.py
scripts/deployment/: deploy_hostinger.sh  setup_n8n_hostinger.sh  setup_ssl_hostinger.sh
scripts/shutdown/: stop_all.sh
scripts/startup/: init_jarvis.sh
services/backup_service/: backup_scheduler.py  main.py
services/brain_sync/: brain_sync_service.py
services/cron_service/: scheduler.py
services/mission_control/: main.py
services/voice_service/: main.py
skills/automation/n8n-integration/: SKILL.md  n8n_integration.py
skills/core/archangel-agent-factory/: SKILL.md  agent_template.py  spawn_all.py
skills/core/cron-automation/: SKILL.md  install_cron.py
skills/core/hostinger-backup-sync/: SKILL.md  restore_from_hostinger.py  sync_to_hostinger.py
skills/core/openjarvis-integration/: SKILL.md
skills/core/security-hardening/: SKILL.md
skills/core/vector-memory-rag/: SKILL.md  index_brains.py  rag_query.py
skills/core/voice-pipeline/: SKILL.md  rvc_voice.py  stt_whisper.py  tts_piper.py  voice_pipeline.py  wake_porcupine.py
skills/finance/stripe-integration/: SKILL.md
vector_db/: chroma.sqlite3  index_info.json
vector_db/chroma/: chroma.sqlite3
(+66 files in other folders)
